--- a/ebook/ebookstore/templates/ebookstore/AddBook.html
+++ b/ebook/ebookstore/templates/ebookstore/AddBook.html
@@ -263,6 +263,10 @@
 				document.querySelector("input[name=cover]").value = "";
 			};	
 		</script>
+
+    <script type="text/javascript" src="/static/ebookstore/vendors/jquery-validation/dist/jquery.validate.min.js"></script>
+		<script src="/static/ebookstore/assets/form-validation.js"></script>
+
 	</body>
 
 </html>
