--- a/ebook/ebookstore/templates/ebookstore/ModifyBook.html
+++ b/ebook/ebookstore/templates/ebookstore/ModifyBook.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="block-content collapse in">
                     <div class="span12">
-                        <form class="form-horizontal" action="/ebookstore/addBook/">
+                        <form class="form-horizontal" method="post"  action="/ebookstore/addBook/">
                             <div class="control-group">
                               <label class="control-label">书名</label>
                               <div class="controls">
