--- a/ebook/ebookstore/templates/ebookstore/base.html
+++ b/ebook/ebookstore/templates/ebookstore/base.html
@@ -205,7 +205,7 @@
 									<a tabindex="-1" href="/ebookstore/myinfo" id="myinfo">我的信息</a>
 								</li>
 								<li>
-									<a tabindex="-1" href="/ebookstore/order_content">我的订单</a>
+									<a tabindex="-1" href="/ebookstore/UserOrder/">我的订单</a>
 								</li>
 								<li>
 									<a tabindex="-1" href="/ebookstore/cart">购物车</a>
