--- a/ebook/ebookstore/templates/ebookstore/test.html
+++ b/ebook/ebookstore/templates/ebookstore/test.html
@@ -1,115 +1,197 @@
-{% extends "ebookstore/manage_base.html" %}
-{% block title %}修改书籍{% endblock %}
+{% extends "ebookstore/base.html" %}
+{% block title %}我的订单{% endblock %}
 {% block thirt %}
 {% endblock %}
 {% block body %}
-<div class="row-fluid" style="width: 70%; margin:0 auto ;">
-            <!-- block -->
-            <div class="block">
-                <div class="navbar navbar-inner block-header">
-                    <div class="muted pull-left">修改书籍</div>
-                </div>
-                <div class="block-content collapse in">
-                    <div class="span12">
-                        <form class="form-horizontal">
-                            <div class="control-group">
-                              <label class="control-label">书名</label>
-                              <div class="controls">
-                                <span class="input-xlarge uneditable-input">此处为书名</span>
-                              </div>
-                            </div>
-                            <div class="control-group">
-                              <label class="control-label">ISBN</label>
-                              <div class="controls">
-                                <span class="input-xlarge uneditable-input">此处为ISBN</span>
-                              </div>
-                            </div>
-                            <div class="control-group">
-                              <label class="control-label" for="typeahead">作者 </label>
-                              <div class="controls">
-                                <input type="text" class="span6" id=""  data-provide="typeahead" data-items="4" >
-                              </div>
-                            </div>
-                            <div class="control-group">
-                              <label class="control-label" for="typeahead">出版社 </label>
-                              <div class="controls">
-                                <input type="text" class="span6" id=""  data-provide="typeahead" data-items="4" >
-                              </div>
-                            </div>
-                            <div class="control-group">
-                              <label class="control-label" for="date01">出版日期</label>
-                              <div class="controls">
-                                <input type="text" class="input-xlarge datepicker" id="date01" >
-                             </div>
-                            </div>
-                            <div class="control-group">
-                              <label class="control-label" for="select01">类别</label>
-                              <div class="controls">
-                                <select id="select01" class="chzn-select">
-                                  <option>英语类</option>
-                                  <option>计算机类</option>
-                                </select>
-                              </div>
-                            </div>
-                            <div class="control-group">
-                              <label class="control-label" for="typeahead">库存 </label>
-                              <div class="controls">
-                                <input type="text" class="span6" id=""  data-provide="typeahead" data-items="4" >
-                              </div>
-                            </div>
-        					<div class="control-group">
-                              <label class="control-label" for="typeahead">售价 </label>
-                              <div class="controls">
-                                <input type="text" class="span6" id=""  data-provide="typeahead" data-items="4" >
-                              </div>
-                            </div>
-                            <div class="control-group">
-                              <label class="control-label" for="typeahead">成本价 </label>
-                              <div class="controls">
-                                <input type="text" class="span6" id=""  data-provide="typeahead" data-items="4" >
-                              </div>
-                            </div>
-                            <div class="control-group">
-                              <label class="control-label" for="fileInput">封面</label>
-                              <div class="controls">
-                                <input class="input-file uniform_on" id="fileInput" type="file">
-                              </div>
-                            </div>
-                            <div class="control-group">
-                              <label class="control-label" for="textarea2">简介</label>
-                              <div class="controls">
-                                <textarea class="input-xlarge textarea" placeholder="Enter text ..." style="width: 810px; height: 200px"></textarea>
-                              </div>
-                            </div>
-                            <div class="form-actions">
-                              <button type="submit" class="btn btn-primary">保存</button>
-                              <button type="reset" class="btn">取消</button>
-                            </div>
-                        </form>
-
-                    </div>
-                </div>
-            </div>
+<div class="row-fluid" style="width: 70%;margin: 0 auto;">
+			<!-- block -->
+			<div class="block">
+				<div class="navbar navbar-inner block-header">
+					<div class="muted pull-left">订单管理</div>
+				</div>
+				<div class="block-content collapse in">
+					<div class="span12">
+						<table class="table table-striped" style="margin: auto;">
+							<thead>
+								<tr>
+									<th style="width: 15%;">订单号</th>
+									<th style="width: 15%;">订单金额</th>
+									<th style="width: 25%;">下单时间</th>
+									<th style="width: 20%;">订单状态</th>
+									<th style="width: 25%;">处理</th>
+								</tr>
+							</thead>
+							<tbody id="showUserOrder">
+                            <!--
+								<tr id="tr1">
+									<td>
+										<a href="OrderDetail.html">123</a>
+									</td>
+									<td>100</td>
+									<td>2018/9/7</td>
+									<td>未支付</td>
+									<td>
+										<a class="btn btn-info" role="button" style="width:100px;height:30px">去支付</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a href="OrderDetail.html">234</a>
+									</td>
+									<td>105</td>
+									<td>2015/9/2</td>
+									<td>已发货</td>
+									<td>
+										<a class="btn btn-success" role="button" style="width:100px;height:30px">确认收货</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a href="OrderDetail.html">456</a>
+									</td>
+									<td>111</td>
+									<td>2015/9/2</td>
+									<td>已关闭</td>
+									<td>
+										<a class="btn btn-danger" role="button" style="width:100px;height:30px">删除订单</a>
+									</td>
+								</tr>
+								<tr>
+									<td>
+										<a href="OrderDetail.html">4654</a>
+									</td>
+									<td>126</td>
+									<td>2017/9/2</td>
+									<td>已完成</td>
+									<td>
+									</td>
+								</tr>
+								-->
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
             <!-- /block -->
-        </div>
+       </div>
 {% endblock %}
 {% block js %}
-        <script type="text/javascript" src="/static/ebookstore/jquery.js"></script>
-        <script type="text/javascript" src="/static/ebookstore/bootstrap.min.js"></script>
-        <script>
+<script type="text/javascript">
+			var showUserOrder = document.querySelector("#showUserOrder");
+			var orderState = ['删除', "未支付", "未发货", "已发货", "关闭", "已完成"];
+			var arr;
+			$.ajax({
+				url: "/ebookstore/getUserOrder?id=" + localStorage.getItem("id"),
+				method: "get",
+				error: function() {
+					alert('数据出错，请刷新');
+				},
+				success: function(data) {
+					arr = JSON.parse(data),
+						len = arr.length,
+						showUserOrderHTML = ""; //订单状态1：未支付，2：未发货，3：已发货，4：关闭，5：已完成
+					for(var i = 0; i < len; i++) { //1未支付，2未发货，3已发货，4关闭,5已完成
+						switch(Number(arr[i].state)) { //[{id,price,time,state},{},...]
+							case 1:
+								showUserOrderHTML += `<tr>
+									<td>
+										<a href="/ebookstore/OrderDetail?id=${arr[i].id}">${arr[i].id}</a>
+									</td>
+									<td>${arr[i].price}</td>
+									<td>${arr[i].time}</td>
+									<td id="state${i}">${orderState[arr[i].state]}</td>
+									<td><a id="deal${i}" class="btn btn-info" role="button" style="width:100px;height:30px" onclick="pay(${i})">去支付</a></td>
+								</tr>`;
+								break;
+							case 2:
+								showUserOrderHTML += `<tr>
+									<td>
+										<a href="/ebookstore/OrderDetail?id=${arr[i].id}">${arr[i].id}</a>
+									</td>
+									<td>${arr[i].price}</td>
+									<td>${arr[i].time}</td>
+									<td id="state${i}">${orderState[arr[i].state]}</td>
+									<td></td>
+								</tr>`;
+								break;
+							case 3:
+								showUserOrderHTML += `<tr>
+									<td>
+										<a href="/ebookstore/OrderDetail?id=${arr[i].id}">${arr[i].id}</a>
+									</td>
+									<td>${arr[i].price}</td>
+									<td>${arr[i].time}</td>
+									<td id="state${i}">${orderState[arr[i].state]}</td>
+									<td><a id="deal${i}" class="btn btn-info" role="button" style="width:100px;height:30px" onclick="getGoods(${i})">确认收货</a></td>
+								</tr>`;
+								break;
+							case 5:
+								showUserOrderHTML += `<tr>
+									<td>
+										<a href="/ebookstore/OrderDetail?id=${arr[i].id}">${arr[i].id}</a>
+									</td>
+									<td>${arr[i].price}</td>
+									<td>${arr[i].time}</td>
+									<td id="state${i}">${orderState[arr[i].state]}</td>
+									<td></td>
+								</tr>`;
+								break;
 
-	jQuery(document).ready(function() {
-	   FormValidation.init();
-	});
+						}
 
+					}
+					showUserOrder.innerHTML = showUserOrderHTML;
+				}
+			});
 
-        $(function() {
-            $(".datepicker").datepicker();
-            $(".uniform_on").uniform();
-            $(".chzn-select").chosen();
-            $('.textarea').wysihtml5();
+			function pay(i) {
+				$.ajax({
+					url: "/ebookstore/changeUserOrderState",
+					method: "post",
+					data: {
+						id: arr[i].id,
+						state: 2
+					},
+					error: function() {
+						alert('状态改变失败');
+					},
+					success: function(data) {
+						switch(Number(data)) {
+							case 1:
+								document.querySelector("#state" + i).innerHTML = "已支付";
+								document.querySelector("#deal" + i).remove();
+								break;
+							case 0:
+								alert('状态改变失败');
+								break;
+						}
+					}
+				});
+			}
 
-
-        });
-        </script>
+			function getGoods(i) {
+				$.ajax({
+					url: "/ebookstore/changeUserOrderState",
+					method: "post",
+					data: {
+						id: arr[i].id,
+						state: 5
+					},
+					error: function() {
+						alert('状态改变失败');
+					},
+					success: function(data) {
+						switch(Number(data)) {
+							case 1:
+								document.querySelector("#state" + i).innerHTML = "已完成";
+								document.querySelector("#deal" + i).remove();
+								break;
+							case 0:
+								alert('状态改变失败');
+								break;
+						}
+					}
+				});
+			}
+		</script>
 {% endblock %}
