--- a/ebook/ebookstore/templates/ebookstore/tmp.html
+++ b/ebook/ebookstore/templates/ebookstore/tmp.html
@@ -1,252 +1,33 @@
-<!DOCTYPE html>
-<html>
-
-	<head>
-		<!--
-        	作者：offline
-        	时间：2018-09-07
-        	描述：账目管理页面
-        -->
-		<meta charset="utf-8" />
-		<title>账目管理</title>
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-		<link href="css/bootstrap-responsive.min.css" rel="stylesheet" media="screen">
-		<link href="css/styles.css" rel="stylesheet" media="screen">
-		<link href="assets/DT_bootstrap.css" rel="stylesheet" media="screen">
-		<script src="js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-		<script src="vendors/jquery-1.9.1.js"></script>
-		<script src="bootstrap/js/bootstrap.min.js"></script>
-		<script src="vendors/datatables/js/jquery.dataTables.min.js"></script>
-		<script src="assets/scripts.js"></script>
-		<script src="assets/DT_bootstrap.js"></script>
-		<script src="vendors/bootstrap-datepicker.js"></script>
-		<script type="text/javascript" src="vendors/jquery-validation/dist/jquery.validate.min.js"></script>
-		<script src="assets/form-validation.js"></script>
-		<script>
-			jQuery(document).ready(function() {
-				FormValidation.init();
-			});
-			$(function() {
-				$(".datepicker").datepicker();
-				$(".uniform_on").uniform();
-				$(".chzn-select").chosen();
-				$('.textarea').wysihtml5();
-			});
-		</script>
-		<style>
-			.col-center-block {
-				float: none;
-				display: block;
-				margin-left: auto;
-				margin-right: auto;
-			}
-		</style>
-		<style type="text/css">
-			body {
-				margin: 0 auto;
-				background-image: url(img/背景.jpg);
-				background-size: cover;
-			}
-		</style>
-	</head>
-
-	<body>
-		<nav id="navbar-example" class="navbar navbar-inverse navbar navbar-fixed-top navbar-has-shadow" role="navigation">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed " data-toggle="collapse" data-target=".bs-js-navbar-scrollspy">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-					<a class="navbar-brand" href="#">My-eBookStore</a>
-				</div>
-				<div class="collapse navbar-collapse bs-js-navbar-scrollspy">
-					<ul class="nav navbar-nav">
-						<li>
-							<a href="Book-manage.html">图书管理</a>
-						</li>
-						<li>
-							<a href="user-manage.html">用户管理</a>
-						</li>
-						<li>
-							<a href="order-manage.html">订单管理</a>
-						</li>
-						<li>
-							<a href="Notice-manage.html">公告管理</a>
-						</li>
-						<li class="active">
-							<a href="account-manage.html">账目管理</a>
-						</li>
-						<li>
-							<a href="conment-manage.html">评价管理</a>
-						</li>
-					</ul>
-					<ul class="nav pull-right">
-						<li class="dropdown">
-							<a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">
-								<i class="icon-user"></i> 管理员 <i class="caret"></i>
-							</a>
-							<ul class="dropdown-menu">
-								<li>
-									<a tabindex="-1" href="Administrator-Login.html">Logout</a>
-								</li>
-							</ul>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-		<div class="row-fluid" style="width: 70%;margin: 0 auto;">
-			<!-- block -->
-			<div class="block">
-				<div class="navbar navbar-inner block-header">
-					<div class="muted pull-left">账目管理</div>
-				</div>
-				<div class="block-content collapse in">
-					<div class="span12">
-						<div class="table-toolbar">
-							<div class="control-group">
-								<div class="controls">
-									<input id="start" type="text" class="input-xlarge datepicker" placeholder="初始日期">
-									<input id="end" type="text" class="input-xlarge datepicker" placeholder="结束日期">
-									<a id="search" class="btn btn-info pull-right" href="javascript:void(0);" role="button" style="width:100px;height:30px">查询</a>
-								</div>
-							</div>
-						</div>
-						<table id="total" class="table table-striped" style="margin: auto;">
-							<tr>
-								<th>总销售量：</th>
-								<td><b></b></td>
-							</tr>
-							<tr>
-								<th>总&ensp;成&ensp;本：</th>
-								<td><b></b></td>
-							</tr>
-							<tr>
-								<th>总销售额：</th>
-								<td><b></b></td>
-							</tr>
-							<tr>
-								<th>总&ensp;利&ensp;润：</th>
-								<td><b></b></td>
-							</tr>
-						</table>
-						<table class="table table-striped" style="margin: auto;">
-							<thead>
-								<tr>
-									<th style="width: 50px;">ISBN</th>
-									<th style="width: 300px;">书名</th>
-									<th style="width: 300px;">出版社</th>
-									<th style="width: 100px;">作者</th>
-									<th style="width: 100px;">进价</th>
-									<th style="width: 100px;">售价</th>
-									<th style="width: 100px;">销售量</th>
-									<th style="width: 280px;">营销利润</th>
-								</tr>
-							</thead>
-							<tbody id="showAccount">
-								<tr id="tr1">
-									<td>1</td>
-									<td>加密和解密</td>
-									<td>Otto</td>
-									<td>@mdo</td>
-									<td>10</td>
-									<td>30</td>
-									<td>20</td>
-									<td>**</td>
-								</tr>
-							</tbody>
-						</table>
-						<br />
-
-					</div>
-				</div>
-			</div>
-			<!-- /block -->
-		</div>
-		<script type="text/javascript">
-			//用户信息展示模块
-			var showAccount = document.querySelector("#showAccount");
-			var total = document.querySelector("#total");
-			var arr = null;
-			var totalQuantity = 0,
-				totalCost = 0,
-				totalPrice = 0,
-				totalProfit = 0;
-
-			function queryAccount(start, end) {
-				$.ajax({
-					url: "/ebookstore/queryAccount" + (arguments.length === 0 ? "" : `?start=${encodeURIComponent(start)}&end=${encodeURIComponent(end)}`),
-					method: "get",
-					error: function() {
-						alert('数据出错，请刷新');
-					},
-					success: function(data) {
-						arr = JSON.parse(data);
-						var len = arr.length,
-							showAccountHTML = "";
-						totalQuantity = 0;
-						totalCost = 0;
-						totalPrice = 0;
-						totalProfit = 0;
-						for(var i = 0; i < len; i++) {
-							showAccountHTML += `<tr>
-			                  <td>${arr[i].isbn}</td>
-			                  <td>${arr[i].name}</td>
-			                  <td>${arr[i].press}</td>
-			                  <td>${arr[i].author}</td>
-			                  <td>${arr[i].cost}</td>
-			                  <td>${arr[i].price}</td>
-			                  <td>${arr[i].quantity}</td>
-			                  <td>${(arr[i].price - arr[i].cost) * arr[i].quantity}</td>
-			                </tr>`;
-							totalQuantity += arr[i].quantity;
-							totalCost += arr[i].cost * arr[i].quantity;
-							totalPrice += arr[i].price * arr[i].quantity;
-						}
-						totalProfit = totalPrice - totalCost;
-						total.innerHTML = `<tr>
-								<th>总销售量：</th>
-								<td><b>${totalQuantity}</b></td>
-							</tr>
-							<tr>
-								<th>总&ensp;成&ensp;本：</th>
-								<td><b>${totalCost}</b></td>
-							</tr>
-							<tr>
-								<th>总销售额：</th>
-								<td><b>${totalPrice}</b></td>
-							</tr>
-							<tr>
-								<th>总&ensp;利&ensp;润：</th>
-								<td><b>${totalProfit}</b></td>
-							</tr>`;
-						showAccount.innerHTML = showAccountHTML;
-					}
-				});
-			}
-			queryAccount();
-
+//搜索功能
+			var key = document.querySelector("#key");
 			var search = document.querySelector("#search");
-			var start = document.querySelector("#start");
-			var end = document.querySelector("#end");
 			search.onclick = function() {
-				var startTime = start.value,
-					endTime = end.value;
-				if(startTime.length == 0) {
-					alert("请输入开始日期");
+				var value = key.value;
+				if(!/^[\w\u4e00-\u9fa5]+$/.test(value)) {
+					alert("关键字不合法");
 					return;
 				}
-				if(endTime.length == 0) {
-					alert("请输入结束日期");
-				}
-				queryAccount(startTime, endTime);
-			}
-		</script>
-	</body>
-
-</html>
+				$.ajax({
+					url: "/ebookstore/queryBook?key=" + encodeURIComponent(value),
+					method: "get",
+					error: function() {
+						alert('查找失败');
+					},
+					success: function(data) {
+						var arr = JSON.parse(data),
+							len = arr.length,
+							showBookHTML = "";
+						for(var i = 0; i < len; i++) {
+							showBookHTML += `<div class="col-xs-6 col-md-4">
+							<a href="BookDetail.html?id=${arr[i].id}">
+							<img src="${arr[i].url}" >
+						</a>
+						<a href="BookDetail.html?id=${arr[i].id}">
+							<h3 style=" color: white;">${arr[i].name}</h3>
+						</a>
+					</div>`;
+						}
+						showBook.innerHTML = showBookHTML;
+					}
+				});
+			};
